[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/PulseAttack.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 127.063

[node name="PulseAttack" type="Node2D"]
script = ExtResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="ParticleTimer" type="Timer" parent="."]
wait_time = 0.42
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
disabled = true

[node name="AttackActive" type="Timer" parent="."]
wait_time = 0.1

[node name="AttackStart" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="ParticleTimer" to="." method="_on_ParticleTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AttackActive" to="." method="_on_AttackActive_timeout"]
[connection signal="timeout" from="AttackStart" to="." method="_on_AttackStart_timeout"]
